[tool.poetry]
name = "tic_tac_toe_due"
version = "0.1.0"
description = "Because tests should be easy to read"
authors = ["Peter Vyboch <pvyboch1@gmail.com>"]
license = "MIT"
repository = 'https://github.com/petereon/tic_tac_toe_due'
readme = 'README.md'
keywords = ["python"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: ^3.9',
]
packages = [{ include = "tic_tac_toe_due", from = "src" }]


[tool.poe.tasks]
install = { shell = "poetry install" }
build = { shell = "poetry build" }
clean = { shell = "rm -R ./dist .pytest_cache .mypy_cache &> /dev/null" }

test = { shell = "poetry run pytest" }
test-lint = { shell = "poetry run pytest --mypy --black" }
format = { shell = "poetry run black ." }
lint = { shell = "poetry run mypy ." }


install-self = { shell = "poetry run pip install ./dist/$(ls ./dist | grep .whl | tail -n 1) --force-reinstall" }
uninstall-self = { shell = "poetry run pip uninstall tic_tac_toe_due" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
python_files = ["*test*.py"]
python_functions = ["test"]
minversion = "6.0"
addopts = "--pspec -p no:warnings --cov-report=xml --cov-report=term-missing --cov=tic_tac_toe_due"
testpaths = ["test"]
bdd_features_base_dir = "./test/bdd/features"
markers = [
    "bdd: marks tests as bdd (deselect with '-m \"not bdd\"')",
    "unit: marks tests as unit (deselect with '-m \"not unit\"')",
]

[tool.coverage.run]
omit = ['*test*']

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"


[tool.poetry.dev-dependencies]
# Formatting and Typing
black = { version = "*", allow-prereleases = true }
mypy = "^0.942"

# Pytest: Unit Testing
pytest = "^6.0.0"
pytest-describe = "^2.0.0"
pytest-describe-it = "^0.1.0"

# Pytest: Coverage
pytest-cov = "^3.0.0"

# Pytest: BDD
pytest-bdd = "^5.0.0"

# Pytest: Pretty
pytest-pspec = "^0.0.4"
pytest-clarity = "^1.0.0"

# Formatting and Typing
pytest-black = "^0.3.0"
pytest-mypy = "^0.9.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
